examples/test/testpolicy9347.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9347
  namespace: namespace348
spec:
  podSelector:
    matchLabels:
      key13: value33
      key3: value47
      key15: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value0
      podSelector:
        matchLabels:
          key12: value37
